--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.11.5
 chardet==3.0.4
 cryptography==2.2.2
 future==0.16.0
+huepy==0.9.8.1
 idna==2.6
 Jinja2==2.10
 jtextfsm==0.3.1
@@ -30,3 +31,4 @@ six==1.11.0
 srxpolicysearch==0.0.6
 textfsm==0.4.0
 urllib3==1.22
+xmltodict==0.11.0
