Mulitple New Scripts. Add, Moves & Chanages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asn1crypto==0.24.0
 bcrypt==3.1.4
+cachetools==2.1.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
 cryptography==2.2.2
 future==0.16.0
+google-api-python-client==1.7.3
+google-auth==1.5.0
+google-auth-httplib2==0.0.3
+httplib2==0.11.3
 huepy==0.9.8.1
 idna==2.6
+iptools==0.6.1
 Jinja2==2.10
 jtextfsm==0.3.1
 junos-eznc==2.1.7
@@ -16,8 +22,10 @@ napalm==2.3.0
 ncclient==0.5.3
 netaddr==0.7.19
 netmiko==2.1.1
+oauth2client==4.1.2
 paramiko==2.4.1
 pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycparser==2.18
 pyeapi==0.8.2
 pyIOSXR==0.52
@@ -26,9 +34,11 @@ pynxos==0.0.3
 pyserial==3.4
 PyYAML==3.12
 requests==2.18.4
+rsa==3.4.2
 scp==0.10.2
 six==1.11.0
 srxpolicysearch==0.0.6
 textfsm==0.4.0
+uritemplate==3.0.0
 urllib3==1.22
 xmltodict==0.11.0
